--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
 body {
     font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    
 }
 
+
+
 header {
+    position: absolute;
     display: flex;
+    width: 100vw;
+    height: 50px;
+    z-index: 9991;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-    background-color: #29a12da0;
-    color: rgb(0, 63, 6);
+    padding: 0 20px 0 20px;
+    color: rgb(255, 255, 255);
+    background-color: #042700b1;
+    
+			-webkit-backdrop-filter: blur(10px);
+			-moz-backdrop-filter: blur(10px);
+			-ms-backdrop-filter: blur(10px);
+			backdrop-filter: blur(10px);
+			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.7);
+
+}
+
+.sidebar {
+    position: absolute;
+    top:50px;
+    left: 0px;
+    z-index: 999;
+    height: 100%;
+    width: 50px;
+    padding: 5px;
+    overflow: hidden;
+    background-color: rgba(0, 40, 3, 0.676);
+			border: 1px solid rgba(0, 0, 0, 0.155);
+			-webkit-backdrop-filter: blur(10px);
+			-moz-backdrop-filter: blur(10px);
+			-ms-backdrop-filter: blur(10px);
+			backdrop-filter: blur(10px);
+			box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.162);
+    margin:0px;
+    row-gap: 0px;
+
+}
+
+.sport-icon{
+    padding: 5px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+.sport-icon:hover{
+    -webkit-filter: drop-shadow(3px 2px 3px #230000b1);
+    filter: drop-shadow(3px 2px 3px #230000b1);
+    
+}
+.sport-icons {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+}
+
+
+.sport-icon img {
+    width: 40px;
+    height: 40px;
+    
 }
 
 .logo {
@@ -19,7 +85,7 @@ header {
 }
 
 .search-bar input {
-    width: 300px;
+    width: 20vw;
     padding: 8px;
     border: none;
     border-radius: 4px;
@@ -28,6 +94,7 @@ header {
 .weather-widget {
     display: flex;
     align-items: center;
+    margin-right: 50px;
 }
 
 .weather-widget img {
@@ -38,32 +105,17 @@ header {
 
 .container {
     display: flex;
-    height: calc(100vh - 86px);
+    height: 100vh;
+    width: 100vw;
+    
 }
+.container:focus {
+    outline: revert;
+    border: none;
+  }
 
-.sidebar {
-    width: 40px;
-    padding: 10px;
-    background-color: #29a12da0;
-    overflow: hidden;
-}
 
-.sport-icons {
-    display: flex;
-    flex-direction: column;
-}
 
-.sport-icon {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    cursor: pointer;
-}
-
-.sport-icon img {
-    width: 40px;
-    height: 40px;
-}
 
 #map {
     width: 100%;
@@ -77,6 +129,8 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    
 }
 
 footer nav a {
@@ -120,26 +174,27 @@ footer nav a {
 }
 
 /* Leaflet map customizations */
-.leaflet-popup-content-wrapper {
-   background-color: rgb(205, 234, 211);
-   color:rgb(0, 51, 34)
+.leaflet-popup-content-wrapper, .leaflet-popup-tip  {
+   
+   color:rgb(255, 255, 255);
+   background-color: #042700a4;
+			-webkit-backdrop-filter: blur(5px);
+			-moz-backdrop-filter: blur(10px);
+			-ms-backdrop-filter: blur(10px);
+			backdrop-filter: blur(7px);
+			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
     
 }
-.leaflet-popup-tip {
-    background-color: rgb(205, 234, 211);
-     
- }
 
- 
 
  .navigate-btn {
     width: 100px;
     height: 30px;
     display: flex;
     align-items: center;
-    background-color: rgba(0, 179, 48, 0.575);
+    background-color: rgba(0, 14, 11, 0.941);
     border-radius: 30px;
-    color: rgb(19, 19, 19);
+    color: rgb(250, 250, 250);
     font-weight:600;
     border: none;
     cursor: pointer;
@@ -149,28 +204,82 @@ footer nav a {
   }
   
   .navigate-btn:hover {
-    background-color: rgba(0, 144, 38, 0.767);
+    background-color: rgba(0, 0, 0, 0.3);
     transition-duration: .5s;
+  ;
   }
   
   
-  
+/*   
   .leaflet-control-location{
     padding: 0;
-border: none;
-background: none;
+    border: none;
+    background: none;
 
-  }
+  } */
+  
 
-  .location-icon {
-    
-    width: 46px; 
-    height: 46px; 
-   
+.theme-buttons {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
+.theme-buttons button {
+    width: 100px;
+    padding: 3px 3px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    background-color: rgb(0, 120, 38);
+    transition: background-color 0.3s ease-in-out;
+}
 
+.theme-buttons button:hover {
+    background-color: rgb(0, 80, 20);
+}
 
-
-
-
+.leaflet-control-zoom{
+    position: absolute;
+    top:100px;
+    left:calc(100vw - 80px);
+    z-index:1000;
+    
+  }
+.location-icon {
+    position: absolute;
+    width: 46px; 
+    height: 46px; 
+    bottom: 20px;
+    right: 20px;
+    transition: 0.2s ease-in-out;
+}
+.location-icon:hover{
+    -webkit-filter: drop-shadow(3px 2px 3px #2300005b);
+    filter: drop-shadow(3px 2px 3px #2300006d);
+    filter: grayscale(1);
+   
+}
+.theme-button {
+    position: absolute;
+    width: 52px; 
+    height: 52px;  
+    border: 3px solid white;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    transition: background-image 0.3s;
+    bottom: 110px;
+    right: 26px;
+    z-index: 999;
+    transition: 0.2s ease-in-out;
+}
+.theme-button:hover{
+    -webkit-filter: drop-shadow(3px 2px 3px #2300005b);
+    filter: drop-shadow(3px 2px 3px #2300006d);
+}
