--- a/styles.css
+++ b/styles.css
@@ -283,3 +283,131 @@ footer nav a {
     -webkit-filter: drop-shadow(3px 2px 3px #2300005b);
     filter: drop-shadow(3px 2px 3px #2300006d);
 }
+
+
+/* lockbutton */
+  .btn-lock {
+    position: absolute;
+    bottom: 20px;
+    left: calc(50% - 32px);
+    display: inline-block;
+    background: #ff5b5b;
+    width: 64px;
+    height: 64px;
+    box-sizing: border-box;
+    padding: 12px 0 0 18px;
+    border-radius: 50%;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    z-index: 9999;
+  }
+  .btn-lock svg {
+    fill: none;
+    transform: translate3d(0, 0, 0);
+  }
+  .btn-lock svg .bling {
+    stroke: #fff;
+    stroke-width: 2.5;
+    stroke-linecap: round;
+    stroke-dasharray: 3;
+    stroke-dashoffset: 15;
+    transition: all 0.3s ease;
+  }
+  .btn-lock svg .lock {
+    stroke: #fff;
+    stroke-width: 4;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    stroke-dasharray: 36;
+    transition: all 0.4s ease;
+  }
+  .btn-lock svg .lockb {
+    fill: #fff;
+    fill-rule: evenodd;
+    clip-rule: evenodd;
+    transform: rotate(8deg);
+    transform-origin: 14px 20px;
+    transition: all 0.2s ease;
+  }
+  #zoom-lock {
+    display: none;
+  }
+  #zoom-lock:checked + label {
+    background: #20cca5;
+  }
+  #zoom-lock:checked + label svg {
+    opacity: 1;
+  }
+  #zoom-lock:checked + label svg .bling {
+    animation: bling 0.3s linear forwards;
+    animation-delay: 0.2s;
+  }
+  #zoom-lock:checked + label svg .lock {
+    stroke-dasharray: 48;
+    animation: locked 0.3s linear forwards;
+  }
+  #zoom-lock:checked + label svg .lockb {
+    transform: rotate(0);
+    transform-origin: 14px 22px;
+  }
+  @-moz-keyframes bling {
+    50% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 12;
+    }
+    100% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 9;
+    }
+  }
+  @-webkit-keyframes bling {
+    50% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 12;
+    }
+    100% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 9;
+    }
+  }
+  @-o-keyframes bling {
+    50% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 12;
+    }
+    100% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 9;
+    }
+  }
+  @keyframes bling {
+    50% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 12;
+    }
+    100% {
+      stroke-dasharray: 3;
+      stroke-dashoffset: 9;
+    }
+  }
+  @-moz-keyframes locked {
+    50% {
+      transform: translateY(1px);
+    }
+  }
+  @-webkit-keyframes locked {
+    50% {
+      transform: translateY(1px);
+    }
+  }
+  @-o-keyframes locked {
+    50% {
+      transform: translateY(1px);
+    }
+  }
+  @keyframes locked {
+    50% {
+      transform: translateY(1px);
+    }
+  }
+  
