--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ footer nav a {
 /* Login buttons  */
 .button-3 {
   background-color: #020703;
-  border: 1px solid rgba(255, 255, 255, 0.363);
+  border: 1px solid rgba(209, 209, 209, 0.299);
   border-radius: 30px;
   color: #fff;
   cursor: pointer;
@@ -294,9 +294,16 @@ footer nav a {
   padding: 6px 16px;
   position: relative;
   letter-spacing: 0.8px;
+  margin-left: 10px;
 }
 .button-3:hover {
   background-color: #00000040;
+}
+
+.user-greeting{
+  font-size: 24px;
+  font-weight: 500;
+ 
 }
 
 /* event slidebar */
@@ -678,3 +685,6 @@ body {
       .event-card {
         position: relative; 
       }
+
+
+      
